Add more user properties

--- a/FinalWebApp/FinalWebApp/Views/Users/Details.cshtml
+++ b/FinalWebApp/FinalWebApp/Views/Users/Details.cshtml
@@ -53,10 +53,10 @@
             @Html.DisplayFor(model => model.Profession)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.Status)
+            @Html.DisplayNameFor(model => model.FamilyStatus)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Status)
+            @Html.DisplayFor(model => model.FamilyStatus)
         </dd>
     </dl>
 </div>
