--- a/FinalWebApp/FinalWebApp/Views/Users/Create.cshtml
+++ b/FinalWebApp/FinalWebApp/Views/Users/Create.cshtml
@@ -27,11 +27,11 @@
                 <input asp-for="Birthday" class="form-control" />
                 <span asp-validation-for="Birthday" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Gender" class="control-label"></label>
-                <input asp-for="Gender" class="form-control" />
-                <span asp-validation-for="Gender" class="text-danger"></span>
-            </div>
+			<div class="form-group">
+				<label asp-for="Gender" class="control-label"></label>
+				<select asp-items="Html.GetEnumSelectList<Gender>()" asp-for="Gender" class="form-control"></select>
+				<span asp-validation-for="Gender" class="text-danger"></span>
+			</div>
             <div class="form-group">
                 <label asp-for="CityName" class="control-label"></label>
                 <input asp-for="CityName" class="form-control" />
@@ -47,11 +47,11 @@
                 <input asp-for="Profession" class="form-control" />
                 <span asp-validation-for="Profession" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Status" class="control-label"></label>
-                <select asp-for="Status" class="form-control"></select>
-                <span asp-validation-for="Status" class="text-danger"></span>
-            </div>
+			<div class="form-group">
+				<label asp-for="FamilyStatus" class="control-label"></label>
+				<select asp-items="Html.GetEnumSelectList<FamilyStatus>()" asp-for="FamilyStatus" class="form-control"></select>
+				<span asp-validation-for="FamilyStatus" class="text-danger"></span>
+			</div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-default" />
             </div>
