--- a/FinalWebApp/FinalWebApp/Views/Users/Edit.cshtml
+++ b/FinalWebApp/FinalWebApp/Views/Users/Edit.cshtml
@@ -49,9 +49,9 @@
                 <span asp-validation-for="Profession" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Status" class="control-label"></label>
-                <select asp-for="Status" class="form-control"></select>
-                <span asp-validation-for="Status" class="text-danger"></span>
+                <label asp-for="FamilyStatus" class="control-label"></label>
+                <select asp-for="FamilyStatus" class="form-control"></select>
+                <span asp-validation-for="FamilyStatus" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-default" />
