--- a/FinalWebApp/FinalWebApp/Views/Users/Index.cshtml
+++ b/FinalWebApp/FinalWebApp/Views/Users/Index.cshtml
@@ -34,7 +34,7 @@
                 @Html.DisplayNameFor(model => model.Profession)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Status)
+                @Html.DisplayNameFor(model => model.FamilyStatus)
             </th>
             <th></th>
         </tr>
@@ -64,7 +64,7 @@
                 @Html.DisplayFor(modelItem => item.Profession)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Status)
+                @Html.DisplayFor(modelItem => item.FamilyStatus)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
