--- a/FinalWebApp/FinalWebApp/wwwroot/css/site.css
+++ b/FinalWebApp/FinalWebApp/wwwroot/css/site.css
@@ -3,6 +3,8 @@ for details on configuring this project to bundle and minify static web assets. 
 body {
     padding-top: 50px;
     padding-bottom: 20px;
+    background: url(../images/mainBackground.jpg) no-repeat center fixed;
+    background-size: cover;
 }
 
 /* Wrapping element */
