--- a/FinalWebApp/FinalWebApp/Views/Shared/_Layout.cshtml
+++ b/FinalWebApp/FinalWebApp/Views/Shared/_Layout.cshtml
@@ -66,9 +66,13 @@
             <div class="row">
                 <div class="form-group col-md-offset-4">
                     <span class="input-group-btn">
-                        <button class="btn btn-info" type="button">נסה את החיפוש המיוחד שלנו</button>
+                        <button class="btn btn-info" type="button" onclick="showOrHideFeatures()">נסה את החיפוש המיוחד שלנו</button>
                     </span>
                 </div>
+            </div>
+
+            <div id="featuresView" style="display: none">
+                @Html.Partial("~/Views/_ViewFeatures.cshtml")
             </div>
         </div>
     </div>
@@ -77,9 +81,9 @@
 
     <div class="container body-content">
         @RenderBody()
-        <hr />
+        <!--<hr />-->
         <footer>
-            <p>&copy; 2018 - FinalWebApp</p>
+            <!--<p>&copy; 2018 - FinalWebApp</p>-->
         </footer>
     </div>
 
