--- a/FinalWebApp/FinalWebApp/Views/_ViewFeatures.cshtml
+++ b/FinalWebApp/FinalWebApp/Views/_ViewFeatures.cshtml
@@ -27,7 +27,7 @@
                     <td>
                         <div class="col-md-11 form-group feature">
                             <p>גיל</p>
-                            <input class="form-control" id="age" />
+                            <input class="form-control" id="age" placeholder="שנים"/>
                         </div>
                     </td>
                     <td>
@@ -41,7 +41,7 @@
                     <td>
                         <div class="col-md-11 form-group feature">
                             <p>מקצוע</p>
-                            <input class="form-control" id="profession" />
+                            <input class="form-control" id="profession" placeholder="שכיר/עצמאי"/>
                         </div>
                     </td>
                 </tr>
@@ -49,19 +49,19 @@
                     <td>
                         <div class="col-md-11 form-group feature">
                             <p>תחביב</p>
-                            <input class="form-control" id="hobby" />
+                            <input class="form-control" id="hobby" placeholder="שחיה/טיולים"/>
                         </div>
                     </td>
                     <td>
                         <div class="col-md-11 form-group feature">
                             <p>ארץ מוצא</p>
-                            <input class="form-control" id="contry" />
+                            <input class="form-control" id="contry" placeholder="מדינה"/>
                         </div>
                     </td>
                     <td>
                         <div class="col-md-11 form-group feature">
                             <p>עיר מוצא</p>
-                            <input class="form-control" id="city" />
+                            <input class="form-control" id="city" placeholder="עיר במדינה"/>
                         </div>
                     </td>
                     <td>
