--- a/FinalWebApp/FinalWebApp/Views/_ViewFeatures.cshtml
+++ b/FinalWebApp/FinalWebApp/Views/_ViewFeatures.cshtml
@@ -80,6 +80,8 @@
                 </tr>
             </tbody>
         </table>
+        <br />
+        <button class="btn btn-info col-md-4 col-md-offset-4">חיפוש מיוחד</button>
         <!--
         <environment include="Development">
             <script src="~/lib/jquery/dist/jquery.js"></script>
