--- a/FinalWebApp/FinalWebApp/Views/Shared/_Layout.cshtml
+++ b/FinalWebApp/FinalWebApp/Views/Shared/_Layout.cshtml
@@ -42,12 +42,14 @@
         <div class="col-md-6 col-md-offset-3">
             <br />
             <div class="row">
-                <div class="input-group">
-                    <span class="input-group-btn">
-                        <button class="btn btn-info" type="button">חפש</button>
-                    </span>
-                    <input dir="rtl" type="text" autofocus="true" class="form-control" placeholder="מלון, עיר, ארץ ...">
-                </div>
+				<div class="input-group">
+					<form action="/search" method="get" id="search-form">
+						<input dir="rtl" type="text" autofocus="true" class="form-control" name="place" placeholder="מלון, עיר, ארץ ...">
+					</form>
+					<span class="input-group-btn">
+						<button class="btn btn-info" type="submit" form="search-form">חפש</button>
+					</span>
+				</div>
             </div>
             <br />
             <div dir="rtl" class="row">
