Improving hotels view, using bootstrap.

--- a/FinalWebApp/FinalWebApp/Views/Search/Results.cshtml
+++ b/FinalWebApp/FinalWebApp/Views/Search/Results.cshtml
@@ -12,47 +12,50 @@
 		<link rel="stylesheet" href="~/css/features.css" />
 	</environment>
 	<environment exclude="Development">
-		<link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/css/bootstrap.min.css"
+		<link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/4.2.1/css/bootstrap.min.css"
 			  asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
 			  asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
 		<link rel="stylesheet" href="~/css/features.min.css" asp-append-version="true" />
 	</environment>
 </head>
 <body>
-	<ol>
+	<ul class="list-group">
 		@foreach (var hotel in Model)
 		{
-			<li>
-				<article class="container">
-					<div class="hotel-image">
-						<img src="~/images/HotelsImages/@hotel.Id/image.jpg" />
+			<li class="list-group-item">
+				<article class="container-fluid" style="background-color:white">
+					<div class="col-md-3 hotel-image list-group-item">
+						<img src="~/images/HotelsImages/@hotel.Id/image.jpg" style="object-fit:cover; width:100%" />
 					</div>
-					<div>
-						<div class="hotel-title">
-							<h2>
-								@hotel.Name
-							</h2>
-						</div>
+					<div class="col-md-4 hotel-title list-group-item" style="height:200px">
+						<h2>
+							@hotel.Name
+							<br/>
+							@hotel.Address
+						</h2>
+					</div>
+					<div class="col-md-2 list-group-item" style="height:200px">
 						<div class="hotel-location">
 							<h4>
 								@hotel.Address
 							</h4>
 						</div>
 					</div>
-					<div class="hotel-ofer">
-						<h2 class="price">
-							@hotel.Price
-						</h2>
-						<button>
-							View Offer
-						</button>
+					<div class="col-md-3 list-group-item" style="height:200px">
+						<div class="hotel-ofer">
+							<h2 class="price">
+								@hotel.Price
+							</h2>
+							<button>
+								View Offer
+							</button>
+						</div>
 					</div>
+
 				</article>
 			</li>
 		}
 
-	</ol>
-	<h2>Results</h2>
-
+	</ul>
 </body>
 </html>
