Add a carousel images for offer view. Update bootstrap from 3.7.7 to 4.1.3. Add a new logo for the application.

--- a/FinalWebApp/FinalWebApp/Views/Search/Results.cshtml
+++ b/FinalWebApp/FinalWebApp/Views/Search/Results.cshtml
@@ -50,7 +50,7 @@
 							<form action="/Search/HotelDetails" method="get" id="offer-form">
 							</form>
 							<span class="input-group-btn">
-								<button class="btn btn-info" type="submit" form="offer-form">View Offer</button>
+								<button class="btn btn-info" type="submit" form="offer-form" value="@hotel.Id" name="id">View Offer</button>
 							</span>
 						</div>
 					</div>
