--- a/FinalWebApp/FinalWebApp/Views/Search/OfferView.cshtml
+++ b/FinalWebApp/FinalWebApp/Views/Search/OfferView.cshtml
@@ -1,11 +1,9 @@
-﻿@model List<Hotel>
-	;
+﻿@model Hotel
 
 	@{
     ViewData["Title"] = "OfferView";
 	}
-	@foreach (var hotel in Model)
-		{
+
 	<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
 		<ol class="carousel-indicators">
 			<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -14,13 +12,13 @@
 		</ol>
 		<div class="carousel-inner">
 			<div class="carousel-item active">
-				<img src="~/images/HotelsImages/@hotel.Id/image1.jpg" class="d-block w-100" alt="...">
+				<img src="~/images/HotelsImages/@Model.Id/image1.jpg" class="d-block w-100" >
 			</div>
 			<div class="carousel-item">
-				<img src="~/images/HotelsImages/@hotel.Id/image2.jpg" class="d-block w-100" alt="...">
+				<img src="~/images/HotelsImages/@Model.Id/image2.jpg" class="d-block w-100" >
 			</div>
 			<div class="carousel-item">
-				<img src="~/images/HotelsImages/@hotel.Id/image3.jpg" class="d-block w-100" alt="...">
+				<img src="~/images/HotelsImages/@Model.Id/image3.jpg" class="d-block w-100" >
 			</div>
 		</div>
 		<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -32,4 +30,4 @@
 			<span class="sr-only">Next</span>
 		</a>
 	</div>
-	}
+	
