changing to Hebrew init db with hotels, ciyies and countries

--- a/FinalWebApp/FinalWebApp/Views/Countries/Details.cshtml
+++ b/FinalWebApp/FinalWebApp/Views/Countries/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model FinalWebApp.Models.Contry
+﻿@model FinalWebApp.Models.Country
 
 @{
     ViewData["Title"] = "Details";
@@ -7,7 +7,7 @@
 <h2>Details</h2>
 
 <div>
-    <h4>Contry</h4>
+    <h4>Country</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
