--- a/FinalWebApp/FinalWebApp/Views/Countries/Index.cshtml
+++ b/FinalWebApp/FinalWebApp/Views/Countries/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<FinalWebApp.Models.Contry>
+﻿@model IEnumerable<FinalWebApp.Models.Country>
 
 @{
     ViewData["Title"] = "Index";
