--- a/FinalWebApp/FinalWebApp/Views/Users/Delete.cshtml
+++ b/FinalWebApp/FinalWebApp/Views/Users/Delete.cshtml
@@ -42,10 +42,10 @@
             @Html.DisplayFor(model => model.CityName)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.ContryName)
+            @Html.DisplayNameFor(model => model.CountryName)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.ContryName)
+            @Html.DisplayFor(model => model.CountryName)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.Profession)
