--- a/FinalWebApp/FinalWebApp/Views/Users/Index.cshtml
+++ b/FinalWebApp/FinalWebApp/Views/Users/Index.cshtml
@@ -28,7 +28,7 @@
                 @Html.DisplayNameFor(model => model.CityName)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.ContryName)
+                @Html.DisplayNameFor(model => model.CountryName)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Profession)
@@ -58,7 +58,7 @@
                 @Html.DisplayFor(modelItem => item.CityName)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.ContryName)
+                @Html.DisplayFor(modelItem => item.CountryName)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Profession)
