--- a/FinalWebApp/FinalWebApp/Views/Countries/Delete.cshtml
+++ b/FinalWebApp/FinalWebApp/Views/Countries/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model FinalWebApp.Models.Contry
+﻿@model FinalWebApp.Models.Country
 
 @{
     ViewData["Title"] = "Delete";
@@ -8,7 +8,7 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Contry</h4>
+    <h4>Country</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
