--- a/FinalWebApp/FinalWebApp/Views/Countries/Edit.cshtml
+++ b/FinalWebApp/FinalWebApp/Views/Countries/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model FinalWebApp.Models.Contry
+﻿@model FinalWebApp.Models.Country
 
 @{
     ViewData["Title"] = "Edit";
@@ -6,7 +6,7 @@
 
 <h2>Edit</h2>
 
-<h4>Contry</h4>
+<h4>Country</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
