--- a/FinalWebApp/FinalWebApp/Views/Shared/_Layout.cshtml
+++ b/FinalWebApp/FinalWebApp/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="~/css/site.css" />
     </environment>
     <environment exclude="Development">
-        <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/css/bootstrap.min.css"
+        <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/4.2.1/css/bootstrap.min.css"
               asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
               asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
         <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
@@ -38,38 +38,41 @@
                 </div>
             </div>
         </nav>
-
-        <div class="col-md-6 col-md-offset-3">
+    </div>
+    
+    <div class="container col-md-8 col-md-offset-2">
+        <div class="">
             <br />
             <div class="row">
                 <div class="input-group">
+                    <input type="text" autofocus="true" class="form-control" placeholder="Hotel, city, country">
                     <span class="input-group-btn">
-                        <button class="btn btn-info" type="button">חפש</button>
+                        <button class="btn btn-info" type="button">Search</button>
                     </span>
-                    <input dir="rtl" type="text" autofocus="true" class="form-control" placeholder="מלון, עיר, ארץ ...">
                 </div>
             </div>
             <br />
-            <div dir="rtl" class="row">
-                <label class="col-md-4 col-md-offset-2">תאריך יציאה</label>
-                <label class="col-md-4">תאריך כניסה</label>
-            </div>
-            <div dir="rtl" class="row">
-                <div class="col-md-4 col-md-offset-2">
+            <div class="row col-md-offset-3">
+                <span class="col-md-4">
+                    <label>Enter date</label>
                     <input id="endDate" class="form-control" type="date" />
-                </div>
-                <div class="col-md-4">
+                </span>
+
+                <span class="col-md-4">
+                    <label>Leave date</label>
                     <input id="startDate" class="form-control" type="date" />
-                </div>
+                </span>
             </div>
             <br />
             <div class="row">
-                <div class="form-group col-md-offset-4">
-                    <button class="btn btn-info" type="button" onclick="showOrHideFeatures()">נסה את החיפוש המיוחד שלנו</button>
+                <div class="form-group col-md-offset-5">
+                    <button class="btn btn-info col-md-4" type="button" onclick="showOrHideFeatures()">Try our special search</button>
                 </div>
+                <br />
+                <br />
             </div>
 
-            <div id="featuresView" style="display: none">
+            <div class="col-md-12" id="featuresView" style="display: none">
                 @Html.Partial("~/Views/_ViewFeatures.cshtml")
             </div>
         </div>
