--- a/FinalWebApp/FinalWebApp/Views/Users/Create.cshtml
+++ b/FinalWebApp/FinalWebApp/Views/Users/Create.cshtml
@@ -38,9 +38,9 @@
                 <span asp-validation-for="CityName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ContryName" class="control-label"></label>
-                <input asp-for="ContryName" class="form-control" />
-                <span asp-validation-for="ContryName" class="text-danger"></span>
+                <label asp-for="CountryName" class="control-label"></label>
+                <input asp-for="CountryName" class="form-control" />
+                <span asp-validation-for="CountryName" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Profession" class="control-label"></label>
