--- a/FinalWebApp/FinalWebApp/Views/Shared/_Layout.cshtml
+++ b/FinalWebApp/FinalWebApp/Views/Shared/_Layout.cshtml
@@ -28,18 +28,16 @@
                 
             </div>
         </nav>
-    </div>
     
-    <div class="container col-md-8 col-md-offset-2">
-        <div class="">
+        <div class="container col-md-8 col-md-offset-2">
             <br />
             <div class="row">
 				<div class="input-group">
 					<form action="/search" method="get" id="search-form">
-						<input dir="rtl" type="text" autofocus="true" class="form-control" name="place" placeholder="מלון, עיר, ארץ ...">
+						<input type="text" autofocus="true" class="form-control" name="place" placeholder="Hotel, City, Country...">
 					</form>
 					<span class="input-group-btn">
-						<button class="btn btn-info" type="submit" form="search-form">חפש</button>
+						<button class="btn btn-info" type="submit" form="search-form">Search</button>
 					</span>
 				</div>
             </div>
@@ -58,7 +56,7 @@
             <br />
             <div class="row">
                 <div class="form-group col-md-offset-5">
-                    <button class="btn btn-info col-md-4" type="button" onclick="showOrHideFeatures()">Try our special search</button>
+                    <button class="btn btn-info" type="button" onclick="showOrHideFeatures()">Try our special search</button>
                 </div>
                 <br />
                 <br />
