--- a/FinalWebApp/FinalWebApp/Views/Search/OfferView.cshtml
+++ b/FinalWebApp/FinalWebApp/Views/Search/OfferView.cshtml
@@ -1,9 +1,10 @@
 ﻿@model Hotel
 
-	@{
-    ViewData["Title"] = "OfferView";
-	}
+@{
+	ViewData["Title"] = "OfferView";
+}
 
+<div class="container">
 	<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
 		<ol class="carousel-indicators">
 			<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -12,13 +13,13 @@
 		</ol>
 		<div class="carousel-inner">
 			<div class="carousel-item active">
-				<img src="~/images/HotelsImages/@Model.Id/image1.jpg" class="d-block w-100" >
+				<img src="~/images/HotelsImages/@Model.Id/image1.jpg" class="d-block w-100">
 			</div>
 			<div class="carousel-item">
-				<img src="~/images/HotelsImages/@Model.Id/image2.jpg" class="d-block w-100" >
+				<img src="~/images/HotelsImages/@Model.Id/image2.jpg" class="d-block w-100">
 			</div>
 			<div class="carousel-item">
-				<img src="~/images/HotelsImages/@Model.Id/image3.jpg" class="d-block w-100" >
+				<img src="~/images/HotelsImages/@Model.Id/image3.jpg" class="d-block w-100">
 			</div>
 		</div>
 		<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -30,4 +31,10 @@
 			<span class="sr-only">Next</span>
 		</a>
 	</div>
-	
+
+	<div >
+		<video autoplay>
+			<source src="~/images/HotelsImages/video.mp4" type="video/mp4">
+		</video>
+	</div>
+</div>
