nicer data in view dropdown edit button

--- a/FinalWebApp/FinalWebApp/Views/Hotels/Details.cshtml
+++ b/FinalWebApp/FinalWebApp/Views/Hotels/Details.cshtml
@@ -17,10 +17,22 @@
             @Html.DisplayFor(model => model.Name)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.CityId)
+            @Html.DisplayNameFor(model => model.City)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.CityId)
+            @Html.DisplayFor(model => model.City.Name)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Address)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Address)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Capacity)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Capacity)
         </dd>
     </dl>
 </div>
