--- a/FinalWebApp/FinalWebApp/Views/Hotels/Edit.cshtml
+++ b/FinalWebApp/FinalWebApp/Views/Hotels/Edit.cshtml
@@ -19,9 +19,20 @@
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="CityId" class="control-label"></label>
-                <input asp-for="CityId" class="form-control" />
-                <span asp-validation-for="CityId" class="text-danger"></span>
+                <label asp-for="City" class="control-label"></label>
+                <select asp-for="CityId" class="form-control" asp-items="ViewBag.CityId">
+                    <option>choose</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <label asp-for="Address" class="control-label"></label>
+                <input asp-for="Address" class="form-control" />
+                <span asp-validation-for="Address" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Capacity" class="control-label"></label>
+                <input asp-for="Capacity" class="form-control" />
+                <span asp-validation-for="Capacity" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-default" />
