--- a/FinalWebApp/FinalWebApp/Views/Cities/Details.cshtml
+++ b/FinalWebApp/FinalWebApp/Views/Cities/Details.cshtml
@@ -10,6 +10,18 @@
     <h4>City</h4>
     <hr />
     <dl class="dl-horizontal">
+        <dt>
+            @Html.DisplayNameFor(model => model.Name)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Name)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Country)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Country.Name)
+        </dd>
     </dl>
 </div>
 <div>
