--- a/FinalWebApp/FinalWebApp/Views/Hotels/Index.cshtml
+++ b/FinalWebApp/FinalWebApp/Views/Hotels/Index.cshtml
@@ -7,18 +7,18 @@
 <h2>Index</h2>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create" class="btn btn-info">+</a>
 </p>
-<table class="table">
-    <thead>
+<table class="table table-info table-striped">
+    <thead class="thead-light">
         <tr>
-            <th>
+            <th scope="col">
                 @Html.DisplayNameFor(model => model.Name)
             </th>
-            <th>
+            <th scope="col">
                 @Html.DisplayNameFor(model => model.City)
             </th>
-            <th></th>
+            <th scope="col"></th>
         </tr>
     </thead>
     <tbody>
