--- a/FinalWebApp/FinalWebApp/Views/Search/OfferView.cshtml
+++ b/FinalWebApp/FinalWebApp/Views/Search/OfferView.cshtml
@@ -4,37 +4,71 @@
 	ViewData["Title"] = "OfferView";
 }
 
-<div class="container">
-	<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-		<ol class="carousel-indicators">
-			<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-			<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-			<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-		</ol>
-		<div class="carousel-inner">
-			<div class="carousel-item active">
-				<img src="~/images/HotelsImages/@Model.Id/image1.jpg" class="d-block w-100">
+<div class="container ">
+	<video autoplay class="videoBlock">
+		<source src="~/images/HotelsImages/video.mp4" type="video/mp4" style="width:100%;">
+	</video>
+
+<div class="offer">
+
+	<div class="col-md-8 hotel-image list-group-item">
+		<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+			<ol class="carousel-indicators">
+				<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+				<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+				<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+			</ol>
+			<div class="carousel-inner">
+				<div class="carousel-item active">
+					<img src="~/images/HotelsImages/@Model.Id/image1.jpg" class="d-block w-100">
+				</div>
+				<div class="carousel-item">
+					<img src="~/images/HotelsImages/@Model.Id/image2.jpg" class="d-block w-100">
+				</div>
+				<div class="carousel-item">
+					<img src="~/images/HotelsImages/@Model.Id/image3.jpg" class="d-block w-100">
+				</div>
 			</div>
-			<div class="carousel-item">
-				<img src="~/images/HotelsImages/@Model.Id/image2.jpg" class="d-block w-100">
-			</div>
-			<div class="carousel-item">
-				<img src="~/images/HotelsImages/@Model.Id/image3.jpg" class="d-block w-100">
-			</div>
+			<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+				<span class="sr-only">Previous</span>
+			</a>
+			<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+				<span class="carousel-control-next-icon" aria-hidden="true"></span>
+				<span class="sr-only">Next</span>
+			</a>
 		</div>
-		<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-			<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-			<span class="sr-only">Previous</span>
-		</a>
-		<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-			<span class="carousel-control-next-icon" aria-hidden="true"></span>
-			<span class="sr-only">Next</span>
-		</a>
 	</div>
 
-	<div >
-		<video autoplay>
-			<source src="~/images/HotelsImages/video.mp4" type="video/mp4">
-		</video>
+	<div class="col-md-4 list-group-item">
+		<aside col-md-4>
+			<h4>Epcot Center</h4>
+			<p>The Epcot Center is a theme park in Disney World, Florida.</p>
+		</aside>
+		<div class="col-md-5 list-group-item">
+		<div class="mapouter">
+			<div class="gmap_canvas">
+				<iframe width="600" height="500" id="gmap_canvas" src=@ViewBag.mapAddress frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+			</div>
+			<style>
+				.mapouter {
+					text-align: right;
+					height: 500px;
+					width: 600px;
+				}
+
+				.gmap_canvas {
+					overflow: hidden;
+					background: none !important;
+					height: 500px;
+					width: 600px;
+				}
+			</style>
+		</div>
 	</div>
+	</div>
+	
 </div>
+</div>
+
+
