--- a/FinalWebApp/FinalWebApp/wwwroot/css/features.css
+++ b/FinalWebApp/FinalWebApp/wwwroot/css/features.css
@@ -30,5 +30,5 @@ select {
 	width:100%; height:100%; display:flex; justify-content:center; align-items:center;
 }
 .offer{
-	position:absolute; width:100%; height:100%;
+	width:100%; height:100%;
 }
