--- a/FinalWebApp/FinalWebApp/wwwroot/css/site.css
+++ b/FinalWebApp/FinalWebApp/wwwroot/css/site.css
@@ -1,10 +1,11 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification\ 
 for details on configuring this project to bundle and minify static web assets. */
 body {
-    padding-top: 50px;
-    padding-bottom: 20px;
-    /*background: url(../images/mainBackground1.jpg) no-repeat center fixed;
+	padding-top: 50px;
+	padding-bottom: 20px;
+	/*background: url(../images/mainBackground1.jpg) no-repeat center fixed;
     background-size: cover;*/
+	/*  Background fallback in case of IE8 & down, or in case video doens't load, such as with slower connections  */
 }
 
 /* Wrapping element */
@@ -38,4 +39,18 @@ body {
     }
 }
 
+.mapouter {
+	text-align: right;
+}
 
+.gmap_canvas {
+	overflow: hidden;
+	background: none !important;
+	height: 30rem;
+	width: 50rem;
+}
+
+.carousel-item img {
+	height: 30rem;
+	width: 50rem;
+}
