--- a/FinalWebApp/FinalWebApp/Views/_ViewFeatures.cshtml
+++ b/FinalWebApp/FinalWebApp/Views/_ViewFeatures.cshtml
@@ -2,7 +2,7 @@
 <html>
     <head>
         <environment include="Development">
-            <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
+            <link rel="stylesheet" href="~/lib/bootstrap/css/bootstrap.css" />
             <link rel="stylesheet" href="~/css/features.css" />
         </environment>
         <environment exclude="Development">
@@ -81,6 +81,8 @@
             </tbody>
         </table>
         <br />
-        <button class="btn btn-info col-md-4 col-md-offset-4">special search</button>
+        <div class="text-center">
+            <button class="btn btn-info col-md-4 col-md-offset-4">special search</button>
+        </div>
     </body>
 </html>
