--- a/FinalWebApp/FinalWebApp/Views/Search/OfferView.cshtml
+++ b/FinalWebApp/FinalWebApp/Views/Search/OfferView.cshtml
@@ -5,9 +5,9 @@
 }
 
 <div class="container ">
-	<video autoplay class="videoBlock">
-		<source src="~/images/HotelsImages/video.mp4" type="video/mp4" style="width:100%;">
-	</video>
+	@*<video autoplay class="videoBlock">
+		<source src="~/images/HotelsImages/video.mp4" type="video/mp4" style="width:    ;">
+	</video>*@
 
 	<div class="offer">
 		<div class="row">
