--- a/FinalWebApp/FinalWebApp/wwwroot/css/features.css
+++ b/FinalWebApp/FinalWebApp/wwwroot/css/features.css
@@ -27,8 +27,14 @@ select {
 }
 
 .videoBlock{
-	width:100%; height:100%; display:flex; justify-content:center; align-items:center;
+	width:100%; 
+    height:100%; 
+    display:flex; 
+    justify-content:center; 
+    align-items:center;
 }
+
 .offer{
-	width:100%; height:100%;
+	width:100%; 
+    height:100%;
 }
