--- a/FinalWebApp/FinalWebApp/Views/Home/Index.cshtml
+++ b/FinalWebApp/FinalWebApp/Views/Home/Index.cshtml
@@ -4,38 +4,44 @@
 
 <div class="container-fluid">
 
-        <div class="row search-form">
-            <div class="col-md-4">
-                <div class="search-item">
-                    <form action="/search" method="get" id="search-form">
-                        <input type="text" autofocus="true" class="form-control" name="place" placeholder="Hotel, City, Country...">
-                    </form>
-                </div>
-            </div>
-            <div class="col-md-3">
-                    <label>Enter date</label>
-                    <input id="endDate" class="form-control" type="date" />
-            </div>
-            <div class="col-md-3">
-                    <label>Leave date</label>
-                    <input id="startDate" class="form-control" type="date" />
-            </div>
-            <div class="col-md-2">
-                <div class="input-group-btn search-item">
-                    <button class="btn btn-info" type="submit" form="search-form">Search</button>
-                </div>
-            </div>
-        </div>
+	<div class="col-md-3">
+		<div class="list-group-item">
+		<label>Our tip: Choose your vacation by weather ..</label>
+			<iframe src='https://www.israelweather.co.il/weather_out.asp?code_width=200&height=200&code_color=white&code_font_color=black' width=200 height=200 dir=rtl name='in_frame' frameborder='0' scrolling='No'></iframe>
+		</div>
+		</div>
+		<div class="row search-form">
+			<div class="col-md-4">
+				<div class="search-item">
+					<form action="/search" method="get" id="search-form">
+						<input type="text" autofocus="true" class="form-control" name="place" placeholder="Hotel, City, Country...">
+					</form>
+				</div>
+			</div>
+			<div class="col-md-3">
+				<label>Enter date</label>
+				<input id="endDate" class="form-control" type="date" />
+			</div>
+			<div class="col-md-3">
+				<label>Leave date</label>
+				<input id="startDate" class="form-control" type="date" />
+			</div>
+			<div class="col-md-2">
+				<div class="input-group-btn search-item">
+					<button class="btn btn-info" type="submit" form="search-form">Search</button>
+				</div>
+			</div>
+		</div>
 
-        <div class="form-group col-md-offset-5 text-center search-item">
-            <button class="btn btn-info" type="button" onclick="showOrHideFeatures()">Try our special search</button>
-        </div>
+		<div class="form-group col-md-offset-5 text-center search-item">
+			<button class="btn btn-info" type="button" onclick="showOrHideFeatures()">Try our special search</button>
+		</div>
 
-        <div class="col-md-12" id="featuresView" style="display: none">
-            @Html.Partial("~/Views/_ViewFeatures.cshtml")
-        </div>
+		<div class="col-md-12" id="featuresView" style="display: none">
+			@Html.Partial("~/Views/_ViewFeatures.cshtml")
+		</div>
 
-        <div id="registerView" style="display: none">
-            @Html.Partial("~/Views/Users/RegisterView.cshtml")
-        </div>
-</div>
+		<div id="registerView" style="display: none">
+			@Html.Partial("~/Views/Users/RegisterView.cshtml")
+		</div>
+	</div>
