--- a/FinalWebApp/FinalWebApp/Views/Search/OfferView.cshtml
+++ b/FinalWebApp/FinalWebApp/Views/Search/OfferView.cshtml
@@ -6,9 +6,15 @@
 
 <div class="container ">
 	@*<video autoplay class="videoBlock">
-		<source src="~/images/HotelsImages/video.mp4" type="video/mp4" style="width:    ;">
-	</video>*@
+			<source src="~/images/HotelsImages/video.mp4" type="video/mp4" style="width:    ;">
+		</video>*@
 
+	@*<a target="_blank" href="https://www.booked.net/weather/tel-aviv-18414">
+		<img src="https://w.bookcdn.com/weather/picture/1_18414_1_1_137AE9_160_ffffff_333333_08488D_1_ffffff_333333_0_6.png?scode=124&domid=w209&anc_id=32991" alt="booked.net" />
+	</a>*@
+
+	<iframe src='https://www.israelweather.co.il/weather_out.asp?code_width=150&height=200&code_color=white&code_font_color=black' width=150 height=200 dir=rtl name='in_frame' frameborder='0' scrolling='No'></iframe>
+	<iframe src='https://www.israelweather.co.il/upload/weekly1.html' width=150 height=125 dir=rtl name='in_frame' frameborder='0' scrolling='No'></iframe>
 	<div class="offer">
 		<div class="row">
 			<div class="col-md-6 hotel-image">
@@ -41,7 +47,7 @@
 				<button class="btn btn-success">Order now</button>
 			</div>
 
-			<div class="col-md-6">				
+			<div class="col-md-6">
 				<div class="mapouter">
 					<div class="gmap_canvas">
 						<iframe id="gmap_canvas" src=@ViewBag.mapAddress frameborder="0" scrolling="no" marginheight="0" marginwidth="0" width="100%" height="100%"></iframe>
