fixing db relations initializing db

--- a/FinalWebApp/FinalWebApp/Views/Users/Delete.cshtml
+++ b/FinalWebApp/FinalWebApp/Views/Users/Delete.cshtml
@@ -36,16 +36,10 @@
             @Html.DisplayFor(model => model.Gender)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.CityName)
+            @Html.DisplayNameFor(model => model.City)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.CityName)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.CountryName)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.CountryName)
+            @Html.DisplayFor(model => model.City.Name)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.Profession)
