--- a/FinalWebApp/FinalWebApp/Views/Users/Edit.cshtml
+++ b/FinalWebApp/FinalWebApp/Views/Users/Edit.cshtml
@@ -34,14 +34,10 @@
                 <span asp-validation-for="Gender" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="CityName" class="control-label"></label>
-                <input asp-for="CityName" class="form-control" />
-                <span asp-validation-for="CityName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CountryName" class="control-label"></label>
-                <input asp-for="CountryName" class="form-control" />
-                <span asp-validation-for="CountryName" class="text-danger"></span>
+                <label asp-for="City" class="control-label"></label>
+                <select asp-for="CityId" class="form-control" asp-items="ViewBag.CityId">
+                    <option>choose</option>
+                </select>
             </div>
             <div class="form-group">
                 <label asp-for="Profession" class="control-label"></label>
