--- a/FinalWebApp/FinalWebApp/Views/Search/OfferView.cshtml
+++ b/FinalWebApp/FinalWebApp/Views/Search/OfferView.cshtml
@@ -45,6 +45,10 @@
 					</div>
 				</div>
 			</div>
+
+			<div>
+				<script type='text/javascript' src='https://darksky.net/widget/default/@ViewBag.coords/uk12/en.js?width=100%&height=350&title=Full Forecast&textColor=333333&bgColor=FFFFFF&transparency=false&skyColor=undefined&fontFamily=Default&customFont=&units=uk&htColor=333333&ltColor=C7C7C7&displaySum=yes&displayHeader=yes'></script>
+			</div>
 		</div>
 	</div>
 </div>
