--- a/FinalWebApp/FinalWebApp/Views/Users/Create.cshtml
+++ b/FinalWebApp/FinalWebApp/Views/Users/Create.cshtml
@@ -55,7 +55,11 @@
             </div>
             <div class="form-group">
                 <label asp-for="IsAdmin" class="control-label"></label>
-                <select asp-items="Html.GetEnumSelectList<Boolean>()" asp-for="IsAdmin"></select>
+                <select asp-for="IsAdmin"></select>
+                <select asp-for="IsAdmin" class="form-control">
+                    <option>false</option>
+                    <option>true</option>
+                </select>
                 <span asp-validation-for="IsAdmin" class="text-danger"></span>
             </div>
             <div class="form-group">
