--- a/FinalWebApp/FinalWebApp/Views/Users/Loginview.cshtml
+++ b/FinalWebApp/FinalWebApp/Views/Users/Loginview.cshtml
@@ -21,7 +21,7 @@
             </div>
         </div>
         <div class="modal-footer">
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button action="/Users/Login" type="submit" class="btn btn-primary">Submit</button>
             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
         </div>
     </div>
