--- a/FinalWebApp/FinalWebApp/Views/Users/RegisterView.cshtml
+++ b/FinalWebApp/FinalWebApp/Views/Users/RegisterView.cshtml
@@ -70,7 +70,7 @@
             </div>
         </div>
         <div class="modal-footer">
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button action="/Users/Register" type="submit" class="btn btn-primary">Submit</button>
             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
         </div>
     </div>
