login and register views

--- a/FinalWebApp/FinalWebApp/Views/Home/Index.cshtml
+++ b/FinalWebApp/FinalWebApp/Views/Home/Index.cshtml
@@ -36,6 +36,6 @@
 		</div>
 
 		<div id="registerView" style="display: none">
-			@Html.Partial("~/Views/Users/RegisterView.cshtml")
+			@Html.Partial("~/Views/Users/Register.cshtml")
 		</div>
 	</div>
