--- a/FinalWebApp/FinalWebApp/Views/Shared/_Layout.cshtml
+++ b/FinalWebApp/FinalWebApp/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNetCore.Http
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -23,10 +24,13 @@
         </a>
         <div class="col-md-3"></div>
         <div class="dropdown">
-            <button class="btn btn-outline-info" id="editButton" 
-                    type="button" data-toggle="dropdown" style="display: block">
+            @if (Globals.isAdminConnected(Context.Session))
+            {
+            <button class="btn btn-outline-info" id="editButton"
+                    type="button" data-toggle="dropdown">
                 Edit
             </button>
+            }
             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                 <a class="dropdown-item" href="~/Hotels">Hotels</a>
                 <a class="dropdown-item" href="~/Cities">Cities</a>
@@ -35,53 +39,65 @@
                 <a class="dropdown-item" href="~/Orders">Orders</a>
             </div>
         </div>
-        <button class="btn btn-outline-warning" id="loginButton" type="button" data-toggle="modal" data-target="#loginView">
-            Login
-        </button>
-        <button class="btn btn-outline-success" id="registerButton" type="button" data-toggle="modal" data-target="#registerView">
-            Rgister
-        </button>
+        @if (Globals.getConnectedUser(Context.Session) == null)
+        {
+            <button class="btn btn-outline-warning" id="loginButton" type="button" data-toggle="modal" data-target="#loginView">
+                Login
+            </button>
+        }
+        @if (Globals.getConnectedUser(Context.Session) != null)
+        {
+            <form action="/Home/Logout" method="post">
+                <input value="Logout" class="btn btn-outline-danger" id="logoutButton" type="submit" data-toggle="modal">
+            </form>
+        }
+        @if (Globals.getConnectedUser(Context.Session) == null)
+        {
+            <button class="btn btn-outline-success" id="registerButton" type="button" data-toggle="modal" data-target="#registerView">
+                Register
+            </button>
+        }
     </nav>
-    
-    <div class="modal fade" id="loginView" role="dialog">
-        @Html.Partial("~/Views/Users/Loginview.cshtml")
-    </div>
 
-    <div class="modal fade" id="registerView" role="dialog">
-        @Html.Partial("~/Views/Users/Registerview.cshtml")
-    </div>
+        <div class="modal fade" id="loginView" role="dialog">
+            @Html.Partial("~/Views/Users/Login.cshtml")
+        </div>
 
-    <partial name="_CookieConsentPartial" />
+        <div class="modal fade" id="registerView" role="dialog">
+            @Html.Partial("~/Views/Users/Register.cshtml")
+        </div>
 
-    <div class="container body-content">
-        @RenderBody()
-        <!--<hr />-->
-        <footer>
-            <!--<p>&copy; 2018 - FinalWebApp</p>-->
-        </footer>
-    </div>
+        <partial name="_CookieConsentPartial" />
 
-    <environment include="Development">
-        <script src="~/lib/jquery/dist/jquery.js"></script>
-        <script src="~/lib/bootstrap/js/bootstrap.js"></script>
-        <script src="~/js/site.js" asp-append-version="true"></script>
-    </environment>
-    <environment exclude="Development">
-        <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-3.3.1.min.js"
-                asp-fallback-src="~/lib/jquery/dist/jquery.min.js"
-                asp-fallback-test="window.jQuery"
-                crossorigin="anonymous"
-                integrity="sha384-tsQFqpEReu7ZLhBV2VZlAu7zcOV+rXbYlF2cqB8txI/8aZajjp4Bqd+V6D5IgvKT">
-        </script>
-        <script src="~/lib/bootstrap/js/bootstrap.js"
-                asp-fallback-src="~/lib/bootstrap/js/bootstrap.js"
-                asp-fallback-test="window.jQuery && window.jQuery.fn && window.jQuery.fn.modal"
-                crossorigin="anonymous"
-                integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa">
-        </script>
-        <script src="~/js/site.min.js" asp-append-version="true"></script>
-    </environment>
+        <div class="container body-content">
+            @RenderBody()
+            <!--<hr />-->
+            <footer>
+                <!--<p>&copy; 2018 - FinalWebApp</p>-->
+            </footer>
+        </div>
 
-    @RenderSection("Scripts", required: false)
-</body>
+        <environment include="Development">
+            <script src="~/lib/jquery/dist/jquery.js"></script>
+            <script src="~/lib/bootstrap/js/bootstrap.js"></script>
+            <script src="~/js/site.js" asp-append-version="true"></script>
+        </environment>
+        <environment exclude="Development">
+            <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-3.3.1.min.js"
+                    asp-fallback-src="~/lib/jquery/dist/jquery.min.js"
+                    asp-fallback-test="window.jQuery"
+                    crossorigin="anonymous"
+                    integrity="sha384-tsQFqpEReu7ZLhBV2VZlAu7zcOV+rXbYlF2cqB8txI/8aZajjp4Bqd+V6D5IgvKT">
+            </script>
+            <script src="~/lib/bootstrap/js/bootstrap.js"
+                    asp-fallback-src="~/lib/bootstrap/js/bootstrap.js"
+                    asp-fallback-test="window.jQuery && window.jQuery.fn && window.jQuery.fn.modal"
+                    crossorigin="anonymous"
+                    integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa">
+            </script>
+            <script src="~/js/site.min.js" asp-append-version="true"></script>
+        </environment>
+
+        @RenderSection("Scripts", required: false)
+    </body>
 </html>
