--- a/FinalWebApp/FinalWebApp/Views/Search/OfferView.cshtml
+++ b/FinalWebApp/FinalWebApp/Views/Search/OfferView.cshtml
@@ -1,56 +1,64 @@
 ﻿@model Hotel
 
 @{
-	ViewData["Title"] = "OfferView";
+    ViewData["Title"] = "OfferView";
 }
 
 <div class="container ">
 
-	<div class="offer">
-		<div class="row">
-			<div class="col-md-6 hotel-image">
-				<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-					<ol class="carousel-indicators">
-						<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-						<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-						<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-					</ol>
-					<div class="carousel-inner">
-						<div class="carousel-item active">
-							<img src="~/images/HotelsImages/@Model.Id/image1.jpg" class="d-block w-100">
-						</div>
-						<div class="carousel-item">
-							<img src="~/images/HotelsImages/@Model.Id/image2.jpg" class="d-block w-100">
-						</div>
-						<div class="carousel-item">
-							<img src="~/images/HotelsImages/@Model.Id/image3.jpg" class="d-block w-100">
-						</div>
-					</div>
-					<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-						<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-						<span class="sr-only">Previous</span>
-					</a>
-					<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-						<span class="carousel-control-next-icon" aria-hidden="true"></span>
-						<span class="sr-only">Next</span>
-					</a>
-				</div>
-				<button class="btn btn-success">Order now</button>
-			</div>
+    <div class="offer">
+        <div class="row">
+            <div class="col-md-4 hotel-image">
+                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="~/images/HotelsImages/@Model.Id/image1.jpg" class="d-block w-100">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="~/images/HotelsImages/@Model.Id/image2.jpg" class="d-block w-100">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="~/images/HotelsImages/@Model.Id/image3.jpg" class="d-block w-100">
+                        </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
+                <div class="order-button">
+                    <button onclick="goBack()" class="btn btn-danger back-button">back</button>
+                    <button class="btn btn-warning order-now-button">Order now</button>
+                </div>
+            </div>
 
-			<div class="col-md-6">
-				<div class="mapouter">
-					<div class="gmap_canvas">
-						<iframe id="gmap_canvas" src=@ViewBag.mapAddress frameborder="0" scrolling="no" marginheight="0" marginwidth="0" width="100%" height="100%"></iframe>
-					</div>
-				</div>
-			</div>
+            <div class="col-md-4">
+                <div class="mapouter">
+                    <div class="gmap_canvas">
+                        <iframe id="gmap_canvas" src=@ViewBag.mapAddress frameborder="0" scrolling="no" marginheight="0" marginwidth="0" width="100%" height="100%"></iframe>
+                    </div>
+                </div>
+            </div>
 
-			<div>
-				<script type='text/javascript' src='https://darksky.net/widget/default/@ViewBag.coords/uk12/en.js?width=100%&height=350&title=Full Forecast&textColor=333333&bgColor=FFFFFF&transparency=false&skyColor=undefined&fontFamily=Default&customFont=&units=uk&htColor=333333&ltColor=C7C7C7&displaySum=yes&displayHeader=yes'></script>
-			</div>
-		</div>
-	</div>
+            <div class="col-md-4">
+                <script type='text/javascript' src='https://darksky.net/widget/default/@ViewBag.coords/uk12/en.js?width=100%&height=350&title=Full Forecast&textColor=333333&bgColor=FFFFFF&transparency=false&skyColor=undefined&fontFamily=Default&customFont=&units=uk&htColor=333333&ltColor=C7C7C7&displaySum=yes&displayHeader=yes'></script>
+            </div>
+        </div>
+    </div>
 </div>
 
 
+<script>
+    function goBack() {
+        window.history.back();
+    }
+</script>
