--- a/FinalWebApp/FinalWebApp/Views/_ViewSearch.cshtml
+++ b/FinalWebApp/FinalWebApp/Views/_ViewSearch.cshtml
@@ -1,47 +1,30 @@
-﻿<!DOCTYPE html>
-<html>
-    <head>
-        <environment include="Development">
-            <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
-            <link rel="stylesheet" href="~/css/features.css" />
-        </environment>
-        <environment exclude="Development">
-            <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/4.2.1/css/bootstrap.min.css"
-                  asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
-                  asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
-            <link rel="stylesheet" href="~/css/features.min.css" asp-append-version="true" />
-        </environment>
-    </head>
-    <body>
-        <div class="row">
-            <div class="input-group">
-                <form action="/search" method="get" id="search-form">
-                    <input type="text" autofocus="true" class="form-control" name="place" placeholder="Hotel, City, Country...">
-                </form>
-                <span class="input-group-btn">
-                    <button class="btn btn-info" type="submit" form="search-form">Search</button>
-                </span>
-            </div>
-        </div>
-        <br />
-        <div class="row col-md-offset-3">
-            <span class="col-md-4">
-                <label>Enter date</label>
-                <input id="endDate" class="form-control" type="date" />
-            </span>
+﻿<div class="row">
+    <div class="input-group">
+        <form action="/search" method="get" id="search-form">
+            <input type="text" autofocus="true" class="form-control" name="place" placeholder="Hotel, City, Country...">
+        </form>
+        <span class="input-group-btn">
+            <button class="btn btn-info" type="submit" form="search-form">Search</button>
+        </span>
+    </div>
+</div>
+<br />
+<div class="row col-md-offset-3">
+    <span class="col-md-4">
+        <label>Enter date</label>
+        <input id="endDate" class="form-control" type="date" />
+    </span>
 
-            <span class="col-md-4">
-                <label>Leave date</label>
-                <input id="startDate" class="form-control" type="date" />
-            </span>
-        </div>
-        <br />
-        <div class="row">
-            <div class="form-group col-md-offset-5">
-                <button class="btn btn-info" type="button" onclick="showOrHideFeatures()">Try our special search</button>
-            </div>
-            <br />
-            <br />
-        </div>
-    </body>
-</html>
+    <span class="col-md-4">
+        <label>Leave date</label>
+        <input id="startDate" class="form-control" type="date" />
+    </span>
+</div>
+<br />
+<div class="row">
+    <div class="form-group col-md-offset-5">
+        <button class="btn btn-info" type="button" onclick="showOrHideFeatures()">Try our special search</button>
+    </div>
+    <br />
+    <br />
+</div>
