--- a/FinalWebApp/FinalWebApp/Views/Search/Results.cshtml
+++ b/FinalWebApp/FinalWebApp/Views/Search/Results.cshtml
@@ -1,44 +1,49 @@
-﻿@model List<Hotel>;
+﻿@model FinalWebApp.Dto.ResultModel
 
 @{
-	ViewData["Title"] = "Results";
-
+    ViewData["Title"] = "Results";
+    var checkin = Model.checkin;
+    var checkout = Model.checkout;
 }
+
+
 <ul class="hotel-result-list">
-	@foreach (var hotel in Model)
-	{
-		<li class="row">
-				<div class="col-md-3 hotel-image">
-					<img src="~/images/HotelsImages/@hotel.Id/image.jpg" style="object-fit:cover; width:100%" />
-				</div>
-				<div class="col-md-4 hotel-title" style="height:200px">
-					<h2>
-						@hotel.Name
-						<br />
-						@hotel.Address
-					</h2>
-				</div>
-				<div class="col-md-2" style="height:200px">
-					<div class="hotel-location">
-						<h4>
-							@hotel.Address
-						</h4>
-					</div>
-				</div>
-				<div class="col-md-3" style="height:200px">
-					<div class="hotel-ofer">
-						<h2 class="price">
-							@hotel.Price
-						</h2>
+    @foreach (var hotel in Model.hotels)
+    {
+        <li class="row">
+            <div class="col-md-3 hotel-image">
+                <img src="~/images/HotelsImages/@hotel.Id/image.jpg" style="object-fit:cover; width:100%" />
+            </div>
+            <div class="col-md-4 hotel-title" style="height:200px">
+                <h2>
+                    @hotel.Name
+                    <br />
+                    @hotel.Address
+                </h2>
+            </div>
+            <div class="col-md-2" style="height:200px">
+                <div class="hotel-location">
+                    <h4>
+                        @hotel.Address
+                    </h4>
+                </div>
+            </div>
+            <div class="col-md-3" style="height:200px">
+                <div class="hotel-ofer">
+                    <h2 class="price">
+                        @hotel.Price
+                    </h2>
 
-						<form action="/Search/HotelDetails" method="get" id="offer-form"></form>
-						<span class="input-group-btn">
-							<button class="btn btn-info" type="submit" form="offer-form" value="@hotel.Id" name="id">View Offer</button>
-						</span>
-					</div>
-				</div>
+                    <form action="/Search/HotelDetails" method="post" id="offer-form"></form>
+                    <span class="input-group-btn">
+                        <input value="@checkin" name="checkin" form="offer-form" hidden/>
+                        <input value="@checkout" name="checkout" form="offer-form" hidden/>
+                        <button class="btn btn-info" type="submit" form="offer-form" value="@hotel.Id" name="id">View Offer</button>
+                    </span>
+                </div>
+            </div>
 
-		</li>
-	}
+        </li>
+    }
 
 </ul>
